// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StandardDialog rendering with base props 1`] = `null`;

exports[`StandardDialog rendering with isLarge false 1`] = `
[
  <div
    className="lab-dialog-overlay"
    onClick={[Function]}
    role="presentation"
  />,
  <div
    className="lab-dialog lab-dialog--standard
            "
  >
    <div
      aria-modal="true"
      className="lab-dialog__content"
      role="dialog"
    >
      <div
        className="lab-dialog__header"
      >
        <div
          className="lab-dialog__title"
        >
          Sample Message Dialog
        </div>
        <button
          className="lab-iconbtn lab-iconbtn--teal"
          onClick={[Function]}
        >
           
          <span
            className="lab-icon lab-icon--Dismiss lab-icon--mineral-80 lab-iconbtn__icon"
          >
            <svg
              aria-hidden={true}
              className="___12fm75w_v8ls9a0 f1w7gpdv fez10in fg4l7m0"
              fill="currentColor"
              height="20"
              viewBox="0 0 20 20"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m4.09 4.22.06-.07a.5.5 0 0 1 .63-.06l.07.06L10 9.29l5.15-5.14a.5.5 0 0 1 .63-.06l.07.06c.18.17.2.44.06.63l-.06.07L10.71 10l5.14 5.15c.18.17.2.44.06.63l-.06.07a.5.5 0 0 1-.63.06l-.07-.06L10 10.71l-5.15 5.14a.5.5 0 0 1-.63.06l-.07-.06a.5.5 0 0 1-.06-.63l.06-.07L9.29 10 4.15 4.85a.5.5 0 0 1-.06-.63l.06-.07-.06.07Z"
                fill="currentColor"
              />
            </svg>
          </span>
        </button>
      </div>
      <p
        className="lab-dialog__body"
      >
        This is the main content of a Message Dialog. You may want to put as much content as you want, as long as it's a string.
      </p>
      <div
        className="lab-dialog__footer"
      >
        <button
          className="lab-btn lab-btn--outline lab-btn--normal lab-btn--teal"
          onClick={[Function]}
          tabIndex={3}
          type="button"
        >
          Optional button
        </button>
        <button
          className="lab-btn lab-btn--default lab-btn--normal lab-btn--teal"
          onClick={[Function]}
          tabIndex={1}
          type="button"
        >
          Required button
        </button>
      </div>
    </div>
  </div>,
]
`;

exports[`StandardDialog rendering with isModal false 1`] = `
<div
  className="lab-dialog lab-dialog--standard
             lab-dialog--large"
>
  <div
    aria-modal="true"
    className="lab-dialog__content"
    role="dialog"
  >
    <div
      className="lab-dialog__header"
    >
      <div
        className="lab-dialog__title"
      >
        Sample Message Dialog
      </div>
      <button
        className="lab-iconbtn lab-iconbtn--teal"
        onClick={[Function]}
      >
         
        <span
          className="lab-icon lab-icon--Dismiss lab-icon--mineral-80 lab-iconbtn__icon"
        >
          <svg
            aria-hidden={true}
            className="___12fm75w_v8ls9a0 f1w7gpdv fez10in fg4l7m0"
            fill="currentColor"
            height="20"
            viewBox="0 0 20 20"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m4.09 4.22.06-.07a.5.5 0 0 1 .63-.06l.07.06L10 9.29l5.15-5.14a.5.5 0 0 1 .63-.06l.07.06c.18.17.2.44.06.63l-.06.07L10.71 10l5.14 5.15c.18.17.2.44.06.63l-.06.07a.5.5 0 0 1-.63.06l-.07-.06L10 10.71l-5.15 5.14a.5.5 0 0 1-.63.06l-.07-.06a.5.5 0 0 1-.06-.63l.06-.07L9.29 10 4.15 4.85a.5.5 0 0 1-.06-.63l.06-.07-.06.07Z"
              fill="currentColor"
            />
          </svg>
        </span>
      </button>
    </div>
    <p
      className="lab-dialog__body"
    >
      This is the main content of a Message Dialog. You may want to put as much content as you want, as long as it's a string.
    </p>
    <div
      className="lab-dialog__footer"
    >
      <button
        className="lab-btn lab-btn--outline lab-btn--normal lab-btn--teal"
        onClick={[Function]}
        type="button"
      >
        Optional button
      </button>
      <button
        className="lab-btn lab-btn--default lab-btn--normal lab-btn--teal"
        onClick={[Function]}
        type="button"
      >
        Required button
      </button>
    </div>
  </div>
</div>
`;

exports[`StandardDialog rendering with isOpen false 1`] = `null`;
